[gd_scene load_steps=3 format=3 uid="uid://ce72qyvaredxn"]

[ext_resource type="Theme" path="res://game/visuals/demo_theme.tres" id="1_i8ey2"]
[ext_resource type="Script" path="res://addons/diisis/templates/visual_novel/stages/stage_root.gd" id="1_uh8ly"]

[node name="StageRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i8ey2")
script = ExtResource("1_uh8ly")

[node name="Background" type="Node2D" parent="."]

[node name="StageContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
